tests/should_pass/test_for_loop.skj
fn main() -> i32 {
    let mut total: u32 = 0;
    for (i: u32 in 0..100) {
        total = total + i;
    }

    let mut length: u32 = 0;
    let my_array: str[6] = ["Tom", "Jerry", "Bugs", "Cat in the Hat", "Bluey", "Moomintroll"];
    for (iterator: str in my_array) {
        length = length + 1;
    }

    let matrix: u32[3][3] = [
        [1, 2, 3],
        [4, 5, 6],
        [7, 8, 9]
    ];

    let mut total2: u32 = 0;
    for (row: u32[3] in matrix) {
        for (col: u32 in row) {
            total2 = total2 + col;
        }
    }

    return 1;
}
