tests/should_fail/test_for_loop_inconsistent_iter_type.skj
fn main() -> u32 {
    for (i: bool in [1, 2, 3, 4, 5]) {
        return 0;
    }
    
    return 1;
}
